--- a/src/app/components/weapons/weapons.component.css
+++ b/src/app/components/weapons/weapons.component.css
@@ -1,5 +1,5 @@
 .container_main{
-    background-image: url("assets/kethaka-vidyananda-1.jpg");
+    background-image: url("../../../assets/kethaka-vidyananda-1.jpg");
     background-size: cover;
     background-repeat: round;
     padding: 0 10em;
