--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid container_main container__main-home">
+<div class="container-fluid container_main container__main-home min-vh-100">
     <nav class="navbar navbar-expand-sm navbar-light" style="padding: 8em 0 0.5em 0;">
         <div class="container">
           <a class="navbar-brand" href="#">ValoApi</a>
