--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-light" style="padding: 8em 0 0.5em 0;">
-      <div class="container">
+<nav class="navbar navbar-expand-sm navbar-light">
+      <div class="container align-items-center">
         <a class="navbar-brand" href="#">ValoApi</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -17,11 +17,6 @@
                     <a class="nav-link" routerLink="/maps">Maps</a>
                 </li>
             </ul>
-            <form class="d-flex my-2 my-lg-0">
-                <input class="form-control me-sm-2" type="text" placeholder="Search...">
-                <button class="btn btn-outline my-2 my-sm-0">Search</button>
-            </form>
         </div>
   </div>
 </nav>
-<hr>
