--- a/src/app/components/weapons/weapons.component.html
+++ b/src/app/components/weapons/weapons.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid container_main position-relative min-vh-100">
+<div class="container-fluid container__main-home position-relative min-vh-100">
     <div class="container d-flex align-items-center justify-content-between border-bottom border-1" style="padding: 8em 0 0.5em 0;">
         <app-navbar></app-navbar>
         <form class="d-flex">
@@ -7,14 +7,15 @@
         </form>
     </div>
     <div class="row grid gap-5 justify-content-center container_cards" style="padding: 3em;">  
-        <div class="card col-sm-3 g-col-4 card_edit" *ngFor="let item of data | filter:filterPost">
-                <img src={{item.displayIcon}} class="card-img-top" alt="...">
-                <div class="card-body">
-                <h5 class="card-title">{{item.displayName}}</h5>
-                <p class="card-text">{{item.description}}</p>
+        <div class="card col-sm-3 g-col-4 pt-3 bg_card" *ngFor="let item of data | filter:filterPost">
+                <div class="card_edit">
+                    <img src={{item.displayIcon}} alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{item.displayName}}</h5>
+                        <p class="card-text">{{item.description}}</p>
+                    </div>
                 </div>
                 <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
                 </div> 
         </div>
     </div>
